--- a/controller/templates/stops_view.html
+++ b/controller/templates/stops_view.html
@@ -187,6 +187,7 @@
         </div>
         <div class="modal-body">
             <a id="info-text-socket"> </a>
+            <a id="info-text-socket-counter"></a>
             <label class="form-label" for="customFile">You can upload video and images</label>
             
                 {{ dropzone.create('/upload/' + stop.id) }}
