fixed bug with travel name

--- a/controller/templates/index.html
+++ b/controller/templates/index.html
@@ -56,8 +56,8 @@
         <div class="modal-body">
           <form>
             <div class="mb-3">
-                <label for="name_input" class="col-form-label">Name:</label>
-                <input id="name_input" type="text" class="form-control">
+                <label for="name_input_edit" class="col-form-label">Name:</label>
+                <input id="name_input_edit" type="text" class="form-control">
             </div>
           </form>
         </div>
