more options and bug fixes

--- a/controller/templates/global_map.html
+++ b/controller/templates/global_map.html
@@ -10,6 +10,7 @@
     <!-- CSS only -->
     <link href="{{ url_for('static', filename='node_modules/bootstrap-icons/font/bootstrap-icons.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename='node_modules/bootstrap/dist/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='node_modules/Leaflet.fullscreen/dist/leaflet.fullscreen.css')}}" rel="stylesheet">
 
     <!-- <link href="{{ url_for('static', filename='node_modules/leaflet/dist/MarkerCluster.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename='node_modules/leaflet/dist/MarkerCluster.Default.css')}}" rel="stylesheet"> -->
@@ -28,6 +29,7 @@
  
     <!-- jQuery library -->
     <script src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='node_modules/Leaflet.fullscreen/dist/Leaflet.fullscreen.min.js')}}"></script>
     
     <script src="{{ url_for('static', filename='js/global_map.js')}}"></script>
     <script src="{{ url_for('static', filename='js/map_utils.js')}}"></script>
